--- a/index.html
+++ b/index.html
@@ -27,17 +27,14 @@
                 <h1>mcMMO Stats</h1>
             </div>
             <ul class="tabs">
-                <li class="github">
-                    <a href="https://github.com/AsyncDevTeam/mcMMO-Stats-Panel">See project on github</a>
+                <li>
+                    <a href="index.html" id="a-active">Presentation</a>
                 </li>
                 <li>
-                    <a href="#">Presentation</a>
+                    <a href="/pages/changelog.html">Changelog</a>
                 </li>
                 <li>
-                    <a href="">Changelog</a>
-                </li>
-                <li>
-                    <a href="">Contributors</a>
+                    <a href="/pages/contributors.html">Contributors</a>
                 </li>
                 <li>
                     <a href="https://paypal.me/roytreo28">Donate</a>
@@ -46,13 +43,16 @@
         </div>
     </header>
     <div class="content">
+        <div class="github">
+            <a href="https://github.com/AsyncDevTeam/mcMMO-Stats-Panel">See project on GitHub <i class="fa-solid fa-arrow-right-long"></i></a>
+        </div>
+        <h1 id="h1-top">Presentation</h1>
         <div class="img">
             <img src="https://stuff.nicolasvaillant.net/mcMMO/626shots_so.png" class="alone" alt="use case">
             <img src="https://stuff.nicolasvaillant.net/mcMMO/238shots_so.png" alt="use case">
             <img src="https://stuff.nicolasvaillant.net/mcMMO/201shots_so.png" alt="use case">
         </div>
         <div class="wrapper-text">
-            <h1>Presentation</h1>
             <p>We've made an aesthetic visual for the famous Minecraft plugin <a href="https://mcmmo.org/#home">mcMMO</a>.
                 We love the first version of mcMMO Stats, we think these data visualizations will help Minecraft player to optimize their gameplay.
                 And this will add a little more competitiveness in your server...
@@ -70,12 +70,17 @@
                 <li class="active">More coming soon...</li>
             </ul>
             <h1>Installation</h1>
-            <p>Download the last release of mcMMO Stats on <a href="https://github.com/AsyncDevTeam/mcMMO-Stats-Panel">Github</a>.</p>
-            <p>We created mcMMO to be the easiest to use. You just have to modify the information present in the 'config' folder.
+            <p>Download the last release of mcMMO Stats on <a href="https://github.com/AsyncDevTeam/mcMMO-Stats-Panel">GitHub</a>.</p>
+            <p>We created mcMMO to be the easiest to use. You just have to modify the information present in the <span>config</span> folder.
                 Connect your database, and... that's all !</p>
             <br>
             <p>Use a reachable server to help your community access their information anywhere, anytime.</p>
-            <h1>License</h1>
+            <h1>
+                License
+                <a href="https://github.com/AsyncDevTeam/mcMMO-Stats-Panel/blob/main/LICENSE.md">
+                    <i class="fa-solid fa-link"></i>
+                </a>
+            </h1>
             <p>This project is licensed under Attribution-NonCommercial 4.0 International (CC BY-NC 4.0).
                 You can use the code, edit it, improve it, but no commercial use should be made. Thanks!</p>
         </div>
