--- a/pages/contributors.html
+++ b/pages/contributors.html
@@ -42,15 +42,13 @@
         </div>
     </header>
     <div class="content">
-        <div class="github">
-            <a href="https://github.com/AsyncDevTeam/mcMMO-Stats-Panel">See project on GitHub <i class="fa-solid fa-arrow-right-long"></i></a>
-        </div>
         <div class="wrapper-text">
-            <h1>Presentation</h1>
-            <p>We've made an aesthetic visual for the famous Minecraft plugin <a href="https://mcmmo.org/#home">mcMMO</a>.
-                We love the first version of mcMMO Stats, we think these data visualizations will help Minecraft player to optimize their gameplay.
-                And this will add a little more competitiveness in your server...
-            </p>
+            <h1 id="h1-top">Contributors</h1>
+            <p>Help us improve mcMMO Stats by submitting new ideas! Otherwise, make a donation to support
+                the development of the application.</p>
+            <a href="https://paypal.me/roytreo28">Make your name appear on the site by making a donation.</a>
+            <h1>Top contributors</h1>
+            <p>Waiting for our first supporter...</p>
         </div>
     </div>
 </main>
