--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -56,6 +56,13 @@
                     <h2>The beginning</h2>
                     <p>We are proud to announce the launching of mcMMO Stats. After months of prototypes, we think this first version is the right one.</p>
                     <p>Contribute to the project to help us improve mcMMO Stats.</p>
+                    <h2>Design</h2>
+                    <ul>
+                        <li>Customize mcMMO Stats appearance</li>
+                        <li>Dark mode</li>
+                        <li>Responsive design</li>
+                        <li class="active">Tips: Use your server logo to select the right colors</li>
+                    </ul>
                     <div class="github">
                         <a href="https://github.com/AsyncDevTeam/mcMMO-Stats-Panel">See project on GitHub <i class="fa-solid fa-arrow-right-long"></i></a>
                     </div>
