--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -54,14 +54,22 @@
                 <div class="content-cl">
                     <img src="/resources/img/launching.png" alt="">
                     <h2>The beginning</h2>
-                    <p>We are proud to announce the launching of mcMMO Stats. After months of prototypes, we think this first version is the right one.</p>
-                    <p>Contribute to the project to help us improve mcMMO Stats.</p>
+                    <p>We are proud to announce the launching of mcMMO Stats. After months of prototypes, we think this first version is the right one.
+                        <a href="https://paypal.me/roytreo28">Contribute to the project to help us improve mcMMO Stats.</a></p>
                     <h2>Design</h2>
                     <ul>
                         <li>Customize mcMMO Stats appearance</li>
                         <li>Dark mode</li>
                         <li>Responsive design</li>
                         <li class="active">Tips: Use your server logo to select the right colors</li>
+                    </ul>
+                    <h2>Features</h2>
+                    <ul>
+                        <li>View global server data directly in the homepage</li>
+                        <li>Best server player</li>
+                        <li>View user data for all your server</li>
+                        <li>Search for a specific user</li>
+                        <li>Visualize data in chart</li>
                     </ul>
                     <div class="github">
                         <a href="https://github.com/AsyncDevTeam/mcMMO-Stats-Panel">See project on GitHub <i class="fa-solid fa-arrow-right-long"></i></a>
