--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                     <a href="index.html" id="a-active">Presentation</a>
                 </li>
                 <li>
-                    <a href="/pages/changelog.html">Changelog</a>
+                    <a href="pages/changelog.html">Changelog</a>
                 </li>
                 <li>
-                    <a href="/pages/contributors.html">Contributors</a>
+                    <a href="pages/contributors.html">Contributors</a>
                 </li>
                 <li>
                     <a href="https://paypal.me/roytreo28">Donate</a>
