--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -27,7 +27,7 @@
             </div>
             <ul class="tabs">
                 <li>
-                    <a href="/index.html">Presentation</a>
+                    <a href="../index.html">Presentation</a>
                 </li>
                 <li>
                     <a href="#" id="a-active">Changelog</a>
