--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 <main>
     <header>
         <div class="container">
-            <div class="top">
+            <a class="top" href="index.html">
                 <img src="resources/ico/def.webp" alt="logo of the website">
                 <h1>mcMMO Stats</h1>
-            </div>
+            </a>
             <ul class="tabs">
-                <li>
-                    <a href="index.html" id="a-active">Presentation</a>
+                <li class="github">
+                    <a href="https://github.com/AsyncDevTeam/mcMMO-Stats-Panel">GitHub</a>
                 </li>
                 <li>
                     <a href="pages/changelog.html">Changelog</a>
@@ -43,9 +43,6 @@
         </div>
     </header>
     <div class="content">
-        <div class="github">
-            <a href="https://github.com/AsyncDevTeam/mcMMO-Stats-Panel">See project on GitHub <i class="fa-solid fa-arrow-right-long"></i></a>
-        </div>
         <h1 id="h1-top">Presentation</h1>
         <div class="img">
             <img src="https://stuff.nicolasvaillant.net/mcMMO/626shots_so.png" class="alone" alt="use case">
