--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -21,13 +21,13 @@
 <main>
     <header>
         <div class="container">
-            <div class="top">
+            <a class="top" href="../index.html">
                 <img src="/resources/ico/def.webp" alt="logo of the website">
                 <h1>mcMMO Stats</h1>
-            </div>
+            </a>
             <ul class="tabs">
-                <li>
-                    <a href="../index.html">Presentation</a>
+                <li class="github">
+                    <a href="https://github.com/AsyncDevTeam/mcMMO-Stats-Panel">GitHub</a>
                 </li>
                 <li>
                     <a href="#" id="a-active">Changelog</a>
