--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -14,7 +14,7 @@
     <!-- icon from fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <!-- css style of the project -->
-    <link rel="stylesheet" href="/resources/css/main.css">
+    <link rel="stylesheet" href="../resources/css/main.css">
     <title>mcMMO Stats | Changelog</title>
 </head>
 <body>
