--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" type="image/x-icon" href="/resources/ico/def.ico">
+    <link rel="icon" type="image/x-icon" href="../resources/ico/def.ico">
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,7 @@
     <header>
         <div class="container">
             <a class="top" href="../index.html">
-                <img src="/resources/ico/def.webp" alt="logo of the website">
+                <img src="../resources/ico/def.webp" alt="logo of the website">
                 <h1>mcMMO Stats</h1>
             </a>
             <ul class="tabs">
@@ -52,7 +52,7 @@
                     </div>
                 </div>
                 <div class="content-cl">
-                    <img src="/resources/img/launching.png" alt="">
+                    <img src="../resources/img/launching.png" alt="">
                     <h2>The beginning</h2>
                     <p>We are proud to announce the launching of mcMMO Stats. After months of prototypes, we think this first version is the right one.
                         <a href="https://paypal.me/roytreo28">Contribute to the project to help us improve mcMMO Stats.</a></p>
