--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -47,12 +47,30 @@
             <div class="element">
                 <div class="version">
                     <div class="pos">
-                        <span class="label">v1.00.0</span>
+                        <a class="label" href="https://github.com/AsyncDevTeam/mcMMO-Stats-Panel/releases/tag/v1.10.0">v1.10.0</a>
+                        <span class="date">20 mars 2023</span>
+                    </div>
+                </div>
+                <div class="content-cl">
+                    <img src="../resources/img/v1.10.0.png" alt="">
+                    <h2>Patching some errors</h2>
+                    <p>In order to fix some issues about wrong paths and unauthorized access on php scripts, we release this new version.</p>
+                    <h2>Bugs Fixed</h2>
+                    <ul>
+                        <li>Absolute not relative paths => to avoid that, all pages were moved to the root of the project</li>
+                        <li>PHP scripts were not secured and denying all requests => to fix this, we implemented the CSRF token</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="element">
+                <div class="version">
+                    <div class="pos">
+                        <a class="label" href="https://github.com/AsyncDevTeam/mcMMO-Stats-Panel/releases/tag/v1.00.0">v1.00.0</a>
                         <span class="date">19 mars 2023</span>
                     </div>
                 </div>
                 <div class="content-cl">
-                    <img src="../resources/img/launching.png" alt="">
+                    <img src="../resources/img/v1.00.0.png" alt="">
                     <h2>The beginning</h2>
                     <p>We are proud to announce the launching of mcMMO Stats. After months of prototypes, we think this first version is the right one.
                         <a href="https://paypal.me/roytreo28">Contribute to the project to help us improve mcMMO Stats.</a></p>
