--- a/index.html
+++ b/index.html
@@ -42,6 +42,25 @@
             </ul>
         </div>
     </header>
+    <div class="release-banner">
+        <div class="fg">
+            <h1>New release</h1>
+            <h3>New release every friday, based on our motivation and <span>your ideas !</span></h3>
+            <a href="https://github.com/AsyncDevTeam/mcMMO-Stats-Panel">
+                Submit your ideas on the GitHub project
+                <i class="fa-solid fa-arrow-right"></i>
+            </a>
+            <div class="line">
+                <label for="newsletter">
+                    <input type="text" id="newsletter" placeholder="Email">
+                </label>
+                <button>Submit</button>
+            </div>
+        </div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+    </div>
     <div class="content">
         <h1 id="h1-top">Presentation</h1>
         <div class="img">
