Add newsletter backend

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <label for="newsletter">
                     <input type="text" id="newsletter" placeholder="Email">
                 </label>
-                <button>Submit</button>
+                <button id="submit-email">Submit</button>
             </div>
         </div>
         <div class="wave"></div>
