--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <div class="container">
             <a class="top" href="index.html">
                 <img src="resources/ico/def.webp" alt="logo of the website">
-                <h1>mcMMO Stats</h1>
+                <h1>mcMMO Dashboard</h1>
             </a>
             <ul class="tabs">
                 <li class="github">
-                    <a href="https://github.com/AsyncDevTeam/mcMMO-Stats-Panel">GitHub</a>
+                    <a href="https://github.com/AsyncDevTeam/mcMMO-Dashboard">GitHub</a>
                 </li>
                 <li>
                     <a href="pages/changelog.html">Changelog</a>
@@ -45,8 +45,9 @@
     <div class="release-banner">
         <div class="fg">
             <h1>New release</h1>
-            <h3>New release every friday, based on our motivation and <span>your ideas !</span></h3>
-            <a href="https://github.com/AsyncDevTeam/mcMMO-Stats-Panel">
+            <h3>New release every two friday, based on our motivation and <span>your ideas !</span></h3>
+            <h3 class="version">Current version is v1.11.0</h3>
+            <a href="https://github.com/AsyncDevTeam/mcMMO-Dashboard">
                 Submit your ideas on the GitHub project
                 <i class="fa-solid fa-arrow-right"></i>
             </a>
@@ -62,7 +63,7 @@
         <div class="wave"></div>
     </div>
     <div class="content">
-        <h1 id="h1-top">Presentation</h1>
+        <h1 id="h1-top" class="top-h">Presentation</h1>
         <div class="img">
             <img src="https://stuff.nicolasvaillant.net/mcMMO/626shots_so.png" class="alone" alt="use case">
             <img src="https://stuff.nicolasvaillant.net/mcMMO/238shots_so.png" alt="use case">
@@ -86,14 +87,14 @@
                 <li class="active">More coming soon...</li>
             </ul>
             <h1>Installation</h1>
-            <p>Download the last release of mcMMO Stats on <a href="https://github.com/AsyncDevTeam/mcMMO-Stats-Panel">GitHub</a>.</p>
+            <p>Download the last release of mcMMO Stats on <a href="https://github.com/AsyncDevTeam/mcMMO-Dashboard">GitHub</a>.</p>
             <p>We created mcMMO to be the easiest to use. You just have to modify the information present in the <span>config</span> folder.
                 Connect your database, and... that's all !</p>
             <br>
             <p>Use a reachable server to help your community access their information anywhere, anytime.</p>
             <h1>
                 License
-                <a href="https://github.com/AsyncDevTeam/mcMMO-Stats-Panel/blob/main/LICENSE.md">
+                <a href="https://github.com/AsyncDevTeam/mcMMO-Dashboard/blob/main/LICENSE.md">
                     <i class="fa-solid fa-link"></i>
                 </a>
             </h1>
