--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mende+Kikakui&display=swap" rel="stylesheet">
+    <script src="../resources/js/index.js" defer></script>
     <!-- css style used to correctly display data tables -->
     <!-- icon from fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
@@ -23,11 +24,11 @@
         <div class="container">
             <a class="top" href="../index.html">
                 <img src="../resources/ico/def.webp" alt="logo of the website">
-                <h1>mcMMO Stats</h1>
+                <h1>mcMMO Dashboard</h1>
             </a>
             <ul class="tabs">
                 <li class="github">
-                    <a href="https://github.com/AsyncDevTeam/mcMMO-Stats-Panel">GitHub</a>
+                    <a href="https://github.com/AsyncDevTeam/mcMMO-Dashboard">GitHub</a>
                 </li>
                 <li>
                     <a href="#" id="a-active">Changelog</a>
@@ -41,13 +42,31 @@
             </ul>
         </div>
     </header>
-    <div class="content">
+    <div class="content top-h">
         <h1 id="h1-top">Changelog</h1>
         <div class="wrapper-cl">
             <div class="element">
                 <div class="version">
                     <div class="pos">
-                        <a class="label" href="https://github.com/AsyncDevTeam/mcMMO-Stats-Panel/releases/tag/v1.10.0">v1.10.0</a>
+                        <a class="label" href="https://github.com/AsyncDevTeam/mcMMO-Dashboard/releases/tag/v1.11.0">v1.11.0</a>
+                        <span class="date">24 mars 2023</span>
+                    </div>
+                </div>
+                <div class="content-cl">
+                    <img src="../resources/img/v1.11.0.png" alt="">
+                    <h2>Support for German language</h2>
+                    <p></p>
+                    <h2>Bugs Fixed</h2>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="element">
+                <div class="version">
+                    <div class="pos">
+                        <a class="label" href="https://github.com/AsyncDevTeam/mcMMO-Dashboard/releases/tag/v1.10.0">v1.10.0</a>
                         <span class="date">20 mars 2023</span>
                     </div>
                 </div>
@@ -65,7 +84,7 @@
             <div class="element">
                 <div class="version">
                     <div class="pos">
-                        <a class="label" href="https://github.com/AsyncDevTeam/mcMMO-Stats-Panel/releases/tag/v1.00.0">v1.00.0</a>
+                        <a class="label" href="https://github.com/AsyncDevTeam/mcMMO-Dashboard/releases/tag/v1.00.0">v1.00.0</a>
                         <span class="date">19 mars 2023</span>
                     </div>
                 </div>
@@ -90,7 +109,7 @@
                         <li>Visualize data in chart</li>
                     </ul>
                     <div class="github">
-                        <a href="https://github.com/AsyncDevTeam/mcMMO-Stats-Panel">See project on GitHub <i class="fa-solid fa-arrow-right-long"></i></a>
+                        <a href="https://github.com/AsyncDevTeam/mcMMO-Dashboard">See project on GitHub <i class="fa-solid fa-arrow-right-long"></i></a>
                     </div>
                 </div>
             </div>
