--- a/pages/contributors.html
+++ b/pages/contributors.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mende+Kikakui&display=swap" rel="stylesheet">
+    <script src="../resources/js/index.js" defer></script>
     <!-- css style used to correctly display data tables -->
     <!-- icon from fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
@@ -23,11 +24,11 @@
         <div class="container">
             <a class="top" href="../index.html">
                 <img src="../resources/ico/def.webp" alt="logo of the website">
-                <h1>mcMMO Stats</h1>
+                <h1>mcMMO Dashboard</h1>
             </a>
             <ul class="tabs">
                 <li class="github">
-                    <a href="https://github.com/AsyncDevTeam/mcMMO-Stats-Panel">GitHub</a>
+                    <a href="https://github.com/AsyncDevTeam/mcMMO-Dashboard">GitHub</a>
                 </li>
                 <li>
                     <a href="changelog.html">Changelog</a>
@@ -41,7 +42,7 @@
             </ul>
         </div>
     </header>
-    <div class="content">
+    <div class="content top-h">
         <div class="wrapper-text">
             <h1 id="h1-top">Contributors</h1>
             <p>Help us improve mcMMO Stats by submitting new ideas! Otherwise, make a donation to support
