--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -10,7 +10,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mende+Kikakui&display=swap" rel="stylesheet">
-    <script src="../resources/js/index.js" defer></script>
     <!-- css style used to correctly display data tables -->
     <!-- icon from fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
@@ -55,12 +54,25 @@
                 <div class="content-cl">
                     <img src="../resources/img/v1.11.0.png" alt="">
                     <h2>Support for German language</h2>
-                    <p></p>
-                    <h2>Bugs Fixed</h2>
+                    <p>Goodbye <em style="text-decoration: line-through">mcMMO-Stats-Panel</em>, welcome mcMMO-Dashboard !</p>
+                    <h2>New features</h2>
                     <ul>
-                        <li></li>
-                        <li></li>
+                        <li>Add gorgeous loading bar</li>
+                        <li>Improve top players visibility accross all pages (highlight their names)</li>
+                        <li>Server version now supports color codes</li>
+                        <li>Server icon is now updated in the header and in the tab</li>
+                        <li>German translation thanks to @James_Bach</li>
+                        <li>Hamburger menu icon is now a cross when open</li>
                     </ul>
+                    <h2>Bug fixed</h2>
+                    <ul>
+                        <li>MDI icons were missing</li>
+                        <li>Issue with wrong translations et column names</li>
+                    </ul>
+                    <h2>Config file</h2>
+                    <p>Please take the new parameters.js because structure was modified a lot.
+                        The german translation was added to parameters.js.
+                        New setting available in parameters.css to set horizontal size of the page (for large screens)</p>
                 </div>
             </div>
             <div class="element">
