--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 Submit your ideas on the GitHub project
                 <i class="fa-solid fa-arrow-right"></i>
             </a>
+            <h2>Stay tuned</h2>
             <div class="line">
                 <label for="newsletter">
                     <input type="text" id="newsletter" placeholder="Email">
