--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -47,6 +47,50 @@
             <div class="element">
                 <div class="version">
                     <div class="pos">
+                        <a class="label" href="https://github.com/AsyncDevTeam/mcMMO-Dashboard/releases/tag/v1.20.0">v1.20.0</a>
+                        <span class="date">10 avril 2023</span>
+                    </div>
+                </div>
+                <div class="content-cl">
+                    <img src="../resources/img/v1.20.0.png" alt="">
+                    <h2>New comparison page!</h2>
+                    <p>Let's welcome the all new comparison page!</p>
+                    <h2>New features</h2>
+                    <ul>
+                        <li>You're now able to compare stats between 2 players</li>
+                        <li>Some animations were added</li>
+                        <li>'rank' parameter added to get_all_leaderboard.php</li>
+                        <li>main.scss is now called style.scss (the file has been cleaned up)</li>
+                        <li>Materialize cdn moved to head.php</li>
+                        <li>JS functions moved to shared.js (copyToClipboardAction, window.onload, openSidebar, setServerStats)</li>
+                        <li>Removal of unnecessary on the aside (these are modified with the translation)</li>
+                        <li>Added translation settings for comparison</li>
+                        <li>Sort function improved</li>
+                        <li>Aside.php page improved to match corresponding page</li>
+                        <li>Total added in search-user</li>
+                        <li>Filter buttons now appear in aside for comparison and search-user</li>
+                        <li>Shortcut labels are now in the active color when selected</li>
+                        <li>Gradient format in parameters.js has been updated</li>
+                        <li>Group by family of abilities in the user page</li>
+                        <li>You can now filter these new groups with a cool dropdown</li>
+                        <li>New numeric sorting for user abilities</li>
+                        <li>The back to top button now appears at the bottom of the page</li>
+                        <li>Some components are now in a separate file</li>
+                        <li>New opacity animation for server stats</li>
+                        <li>Simplified content size with media queries</li>
+                    </ul>
+                    <h2>Bug fixed</h2>
+                    <ul>
+                        <li>Width for wide screen</li>
+                        <li>Aside Button in user page</li>
+                        <li>Text blocked in the first column of the data table when no results are displayed</li>
+                        <li>Translation was not working in user search page</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="element">
+                <div class="version">
+                    <div class="pos">
                         <a class="label" href="https://github.com/AsyncDevTeam/mcMMO-Dashboard/releases/tag/v1.11.0">v1.11.0</a>
                         <span class="date">24 mars 2023</span>
                     </div>
