--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a href="pages/changelog.html">Changelog</a>
                 </li>
                 <li>
-                    <a href="pages/contributors.html">Contributors</a>
+                    <a href="themes.html">Themes</a>
                 </li>
                 <li>
                     <a href="https://paypal.me/roytreo28">Donate</a>
@@ -47,7 +47,7 @@
         <div class="fg">
             <h1>New release</h1>
             <h3>New release every two friday, based on our motivation and <span>your ideas !</span></h3>
-            <h3 class="version">Current version is v1.20.0</h3>
+            <h3 class="version">Current version is v1.22.0</h3>
             <a href="https://github.com/AsyncDevTeam/mcMMO-Dashboard">
                 Submit your ideas on the GitHub project
                 <i class="fa-solid fa-arrow-right"></i>
