--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -33,7 +33,7 @@
                     <a href="#" id="a-active">Changelog</a>
                 </li>
                 <li>
-                    <a href="contributors.html">Contributors</a>
+                    <a href="../themes.html">Themes</a>
                 </li>
                 <li>
                     <a href="https://paypal.me/roytreo28">Donate</a>
@@ -44,6 +44,35 @@
     <div class="content top-h">
         <h1 id="h1-top">Changelog</h1>
         <div class="wrapper-cl">
+            <div class="element">
+                <div class="version">
+                    <div class="pos">
+                        <a class="label" href="https://github.com/AsyncDevTeam/mcMMO-Dashboard/releases/tag/v1.22.0">v1.22.0</a>
+                        <span class="date">23 avril 2023</span>
+                    </div>
+                </div>
+                <div class="content-cl">
+                    <img src="../resources/img/v1.22.0.png" alt="">
+                    <h2>New upload folder</h2>
+                    <p>Get exclusive custom themes!</p>
+                    <h2>New features</h2>
+                    <h3>Comparison page:</h3>
+                    <ul>
+                        <li>Link to player page</li>
+                        <li>Highlighting the best comparison label</li>
+                    </ul>
+                    <h3>New download folder to add pre-made template</h3>
+                    <ul>
+                        <li>You can add an upload.css file to add a theme on your dashboard.
+                            Visit <a href="../themes.html">mcmmo.nicolasvaillant.net/themes.html</a> (coming soon) for exclusive custom themes!</li>
+                    </ul>
+                    <h3>Cleaned up code in the project</h3>
+                    <h2>Bug fixed</h2>
+                    <ul>
+                        <li>Everything is fine for now...</li>
+                    </ul>
+                </div>
+            </div>
             <div class="element">
                 <div class="version">
                     <div class="pos">
