--- a/pages/contributors.html
+++ b/pages/contributors.html
@@ -33,7 +33,7 @@
                     <a href="changelog.html">Changelog</a>
                 </li>
                 <li>
-                    <a href="#" id="a-active">Contributors</a>
+                    <a href="../themes.html">Themes</a>
                 </li>
                 <li>
                     <a href="https://paypal.me/roytreo28">Donate</a>
