--- a/themes.html
+++ b/themes.html
@@ -91,6 +91,9 @@
                 </div>
             </div>
         </div>
+        <div class="last-line">
+            <p class="btn-main">More coming soon...</p>
+        </div>
     </div>
 </main>
 </body>
