--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -47,8 +47,8 @@
             <div class="element">
                 <div class="version">
                     <div class="pos">
-                        <a class="label" href="https://github.com/AsyncDevTeam/mcMMO-Dashboard/releases/tag/v1.22.0">v1.22.0</a>
-                        <span class="date">23 avril 2023</span>
+                        <a class="label" href="https://github.com/AsyncDevTeam/mcMMO-Dashboard/releases/tag/v1.22.1">v1.22.1</a>
+                        <span class="date">25 avril 2023</span>
                     </div>
                 </div>
                 <div class="content-cl">
@@ -56,20 +56,26 @@
                     <h2>New upload folder</h2>
                     <p>Get exclusive custom themes!</p>
                     <h2>New features</h2>
-                    <h3>Comparison page:</h3>
+                    <ul>
+                        <li>Tint for chart now available!</li>
+                        <li>You can change header title directly from parameters.js (search for 'title_header')</li>
+                        <li>We added a force_darkMode variable in parameters.js to force dark mode by default. You still have the option to toggle the behavior with the dark mode button.</li>
+                        <li>Cleaned up code in the project</li>
+                    </ul>
+                    <h4>Comparison page:</h4>
                     <ul>
                         <li>Link to player page</li>
                         <li>Highlighting the best comparison label</li>
                     </ul>
-                    <h3>New download folder to add pre-made template</h3>
+                    <h4>New download folder to add pre-made template</h4>
                     <ul>
                         <li>You can add an upload.css file to add a theme on your dashboard.
                             Visit <a href="../themes.html">mcmmo.nicolasvaillant.net/themes.html</a> (coming soon) for exclusive custom themes!</li>
                     </ul>
-                    <h3>Cleaned up code in the project</h3>
                     <h2>Bug fixed</h2>
                     <ul>
-                        <li>Everything is fine for now...</li>
+                        <li>Some translations have been added (table_player_label, table_total_label which were not included by default in the translation)</li>
+                        <li>The names of the families were not translated</li>
                     </ul>
                 </div>
             </div>
