--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -70,7 +70,7 @@
                     <h4>New download folder to add pre-made template</h4>
                     <ul>
                         <li>You can add an upload.css file to add a theme on your dashboard.
-                            Visit <a href="../themes.html">mcmmo.nicolasvaillant.net/themes.html</a> (coming soon) for exclusive custom themes!</li>
+                            Visit <a href="../themes.html">/themes.html</a> for exclusive custom themes!</li>
                     </ul>
                     <h2>Bug fixed</h2>
                     <ul>
