--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -47,6 +47,21 @@
             <div class="element">
                 <div class="version">
                     <div class="pos">
+                        <a class="label" href="https://github.com/AsyncDevTeam/mcMMO-Dashboard/releases/tag/v1.22.03">v1.22.03</a>
+                        <span class="date">15 mai 2023</span>
+                    </div>
+                </div>
+                <div class="content-cl">
+                    <h2 class="first">Bug fixed</h2>
+                    <ul>
+                        <li>This release includes fix for <a href="https://github.com/AsyncDevTeam/mcMMO-Dashboard/issues/5">#5</a>.</li>
+                    </ul>
+                    <p>Join our <a href="https://discord.gg/F4UKkXQX">Discord server</a> to help us improve this dashboard!</p>
+                </div>
+            </div>
+            <div class="element">
+                <div class="version">
+                    <div class="pos">
                         <a class="label" href="https://github.com/AsyncDevTeam/mcMMO-Dashboard/releases/tag/v1.22.02">v1.22.02</a>
                         <span class="date">25 avril 2023</span>
                     </div>
